--- a/rest_api/package.json
+++ b/rest_api/package.json
@@ -15,6 +15,7 @@
   "author": "Wildan Kurniadi",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.2",
     "morgan": "^1.9.0"
   },
